# TailorTally

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  edit_db.bat  master_data_36_inch.xlsx  master_data_60_inch.xlsx  master_data_template.csv  master_data_template.xlsx  master_data_template_excel.xlsx  run.bat  setup.bat  troubleshoot_backend.bat  verify_school.py  view_db.bat
.agent/workflows/: generatecommitmessage.md
.github/workflows/: test.yml
backend/: Dockerfile  README.md  check_admin.py  fix_admin.py  generate_excel.py  pyproject.toml  troubleshoot.py  verify_settings.py
backend/app/: database.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: admin.py  dashboard.py  master_data.py  orders.py  schools.py
backend/app/utils/: email_utils.py  import_utils.py  security.py
backend/scripts/: edit_db.py  migrate_email.py  update_master_data.py  update_schema.py  view_db.py
backend/tests/: conftest.py  reproduce_issue.py  test_edit_protection.py  test_flow.py  test_orders_search.py  test_suite.py
frontend/: .eslintrc.js  Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  utils.js
frontend/src/components/: Combobox.jsx  Navbar.jsx  Notification.jsx  PrintableOrder.jsx
frontend/src/pages/: AdminSettings.jsx  CreateOrder.jsx  Dashboard.jsx  MasterData.jsx  OrderDetails.jsx  OrderList.jsx
