[project]
name = "tailor-tally-backend"
version = "0.1.0"
description = "Backend for Tailor Tally"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.2",
    "python-multipart>=0.0.9",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "openpyxl>=3.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
