[project]
name = "tailor-tally-backend"
version = "0.1.0"
description = "Backend for Tailor Tally"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.2",
    "python-multipart>=0.0.9",
    "numpy<=1.24.4 ; python_version < '3.9'",
    "numpy>=1.26.0 ; python_version >= '3.9'",
    "pandas<=2.0.3 ; python_version < '3.9'",
    "pandas>=2.0.0 ; python_version >= '3.9'",
    "bcrypt==4.0.1",

    "openpyxl>=3.1.2",
    "sqlite-web>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
